--- a/index.html
+++ b/index.html
@@ -189,10 +189,10 @@ word:"GREENBELT",
 successTitle:"WE ARE GOING TO GREENBELT MAHAL KOOOO!",
 successText:"I LOVE YOUUUUUUU!",
 images:[
-"Greenbelt.jpg",
-"Greenbelt3.jpg",
-"Greenbelt2.jpg",
-"Greenbelt2.jpeg"
+"greenbelt.jpg",
+"greenbelt3.jpg",
+"greenbelt2.jpg",
+"greenbelt2.jpeg"
 ]
 },
 {
@@ -455,3 +455,4 @@ return str.split('').sort(()=>Math.random()-0.5).join('');
 
 </body>
 </html>
+
